Added reset game function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="pauseBackground"></div>
             <div id="pauseText">
                 <h1>Paused</h1>
-                <h2 id="reset" onclick="document.getElementById(&quot;pauseScreen&quot;).style.display=&quot;none&quot;;document.getElementById(&quot;loadingScreen&quot;).style.display=&quot;block&quot;;freeze=true;setTimeout(resetGame,100);">Reset</h2>
+                <h2 class="reset">Reset</h2>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
             <div id="endBackground"></div>
             <div id="endText">
                 <h1 id="message"></h1>
-            <h2 id="reset" onclick="document.getElementById(&quot;endScreen&quot;).style.display=&quot;none&quot;;document.getElementById(&quot;loadingScreen&quot;).style.display=&quot;block&quot;;freeze=true;setTimeout(resetGame,100);">Reset</h2>
+            <h2 class="reset">Reset</h2>
             </div>
         </div>
     </body>
